--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/*
-  
-Use a more-intuitive box-sizing model.
-*/
+* {
+  font-family: "Nunito" sans-serif;
+}
 ::before,
 ::after {
   box-sizing: border-box;
