--- a/src/style.css
+++ b/src/style.css
@@ -2,55 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-  
-Use a more-intuitive box-sizing model.
-*/
+
 ::before,
 ::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-Remove default margin */ {
-  margin: 0;
+* {
+    margin: 0;
 }
-/*
-  Typographic tweaks!
-  
-Add accessible line-height
-Improve text rendering
-/
+
 body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+    min-height: 100vh;
 }
-/
-  
-Improve media defaults
-/
+
+#app {
+    min-height: 100vh;
+}
+
+
 img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
-/
-  
-Remove built-in form typography styles
-/
+
+
 input, button, textarea, select {
-  font: inherit;
+    font: inherit;
 }
-/
-  
-Avoid text overflows
-/
+
+
 p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
-/
-  
-Create a root stacking context
-*/
+
 #root,
 #__next {
-  isolation: isolate;
+    isolation: isolate;
 }
