--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,9 @@
 
 * {
   font-family: "Nunito" sans-serif;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 ::before,
 ::after {
