--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,59 @@
 @import "./base";
 @import "./base/button";
 @import "scrollbar.scss";
+
+* {
+  font-family: "Nunito", sans-serif;
+  box-sizing: border-box !important;
+  user-select: none;
+}
+
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  min-height: 100vh;
+}
+
+#app {
+  min-height: 100vh;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+  isolation: isolate;
+}
