--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,14 @@
 @import "./base";
 @import "./base/button";
 @import "scrollbar.scss";
+
+* {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+body {
+  height: 100%;
+  overflow: hidden;
+}
