--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -9,6 +9,13 @@
 }
 
 .shadow-card {
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2),
-  0 0 12px rgba(0, 0, 0, 0.25);
+  box-shadow:
+    0 0 8px rgba(0, 0, 0, 0.2),
+    0 0 12px rgba(0, 0, 0, 0.25);
+}
+
+.shadow-card-lg {
+  box-shadow:
+    0 0 8px 10px rgba(0, 0, 0, 0.2),
+    0 0 12px 10px rgba(0, 0, 0, 0.25);
 }
